# geofluidprop-R

./: .Rbuildignore  .gitignore  .gitmodules  BinaryFiles  DESCRIPTION  NAMESPACE  README.md  utils_for_package_build.R
R/: H2ONaCl_electrical_conductivity.R  H2ONaCl_utils.R  driesner07.R  driesner07_util.R  electrical_conductivity_bulk_model.R  electrical_conductivity_melt.R  electrical_conductivity_rock.R  geofluidprop.R  geofluidprop_common.R  iapws95.R  klyukinetal17.R
man/: H2ONaCl_M_to_b.Rd  H2ONaCl_M_to_massfrac.Rd  H2ONaCl_M_to_x.Rd  H2ONaCl_b_to_M.Rd  H2ONaCl_b_to_massfrac.Rd  H2ONaCl_b_to_x.Rd  H2ONaCl_ec_SakumaIchiki2016_highP.Rd  H2ONaCl_ec_SakumaIchiki2016_lowP.Rd  H2ONaCl_ec_SenGoode1992.Rd  H2ONaCl_ec_SinmyoKeppler2017.Rd  H2ONaCl_ec_WatanabeEtAl2021_Tpm.Rd  H2ONaCl_ec_WatanabeEtAl2022_density_model_Tpm.Rd  H2ONaCl_massfrac_to_M.Rd  H2ONaCl_massfrac_to_b.Rd  H2ONaCl_massfrac_to_x.Rd  H2ONaCl_molar_ec_WatanabeEtAl2021_vism.Rd  H2ONaCl_x_to_massfrac.Rd  bulk_ec_Archie.Rd  bulk_ec_HSupper.Rd  bulk_ec_ModifiedArchie.Rd  driesner07_H2O_NaCl_LH_xl_Tp.Rd  driesner07_H2O_NaCl_LH_xl_pT.Rd  driesner07_H2O_NaCl_NaCl_solubility_x_pT.Rd  driesner07_H2O_NaCl_NaCl_solubility_xl_pT.Rd  driesner07_H2O_NaCl_NaCl_solubility_xv_pT.Rd  driesner07_H2O_NaCl_T_phx.Rd  driesner07_H2O_NaCl_T_rhopx.Rd  driesner07_H2O_NaCl_Tc_x.Rd  driesner07_H2O_NaCl_VH_vol_frac_h.Rd  driesner07_H2O_NaCl_VH_xv_Tp.Rd  driesner07_H2O_NaCl_VH_xv_pT.Rd  driesner07_H2O_NaCl_VLH_T_xv.Rd  driesner07_H2O_NaCl_VLH_p_T.Rd  driesner07_H2O_NaCl_VLH_xl_T.Rd  driesner07_H2O_NaCl_VLH_xv_T.Rd  driesner07_H2O_NaCl_VL_mass_frac_l.Rd  driesner07_H2O_NaCl_VL_mass_frac_v.Rd  driesner07_H2O_NaCl_VL_p_Txl.Rd  driesner07_H2O_NaCl_VL_p_Txv.Rd  driesner07_H2O_NaCl_VL_pl_Tx.Rd  (+113 more)
src/: Makevars  rinit.c  rwrap_driesner07.c  rwrap_driesner07.h  rwrap_iapws95.c  rwrap_iapws95.h  rwrap_klyukinetal2017.c  rwrap_klyukinetal2017.h
src/lib/: Makefile
src/lib/geofluidprop/: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  ThirdPartyNotices.txt  azure-pipelines.yml
src/lib/geofluidprop/cmake/: FindFreeSteam.cmake  FindPROST.cmake
src/lib/geofluidprop/examples/: CMakeLists.txt
src/lib/geofluidprop/examples/ex_basic/: CMakeLists.txt  ex_basic.c
src/lib/geofluidprop/examples/ex_water_eos/: CMakeLists.txt  ex_water_eos.c
src/lib/geofluidprop/src/: CMakeLists.txt  geofluidprop.def
src/lib/geofluidprop/src/interface/: CMakeLists.txt  eos-driesner07-prost.c  eos-driesner07-prost.h  eos-driesner07.c  eos-driesner07.h  eos-iaps84-prost.c  eos-iaps84-prost.h  eos-iaps84.c  eos-iaps84.h  eos-iapws95.c  eos-iapws95.h  eos-iapws95sbtl-ph.c  eos-iapws95sbtl-ph.h  eos-if97-freesteam.c  eos-if97-freesteam.h  eos-if97.c  eos-if97.h  eos-linear.c  eos-linear.h  eos.c  eos.h  eos_args.h  eos_type.c  eos_type.h  eos_type_impl.c  eos_type_impl.h
src/lib/geofluidprop/src/model/: CMakeLists.txt
src/lib/geofluidprop/src/model/driesner07/: CMakeLists.txt  Driesner2007_H2ONaCl.c  Driesner2007_H2ONaCl.h  Driesner2007_H2ONaCl_prost.c  Driesner2007_H2ONaCl_prost.h  Driesner2007_NaCl.c  Driesner2007_NaCl.h
src/lib/geofluidprop/src/model/iapws/: CMakeLists.txt  IAPS-84.c  IAPS-84.h  IAPWS-95-table.h  IAPWS-95-tablel.h  IAPWS-95-tableq.h  IAPWS-95-template.c  IAPWS-95-template.h  IAPWS-95.c  IAPWS-95.h  IAPWS-95l.c  IAPWS-95q.c  IAPWS-IF97-boundary23.c  IAPWS-IF97-const.h  IAPWS-IF97-region1.c  IAPWS-IF97-region2.c  IAPWS-IF97-region3.c  IAPWS-IF97-sat.c  IAPWS-IF97.c  IAPWS-IF97.h  IAPWS-Melt-11.c  IAPWS-Melt-11.h  IAPWS-SAT-92.c  IAPWS-SAT-92.h  IAPWS-ThermalConductivity-11.c  IAPWS-ThermalConductivity-11.h  IAPWS-Viscosity-08.c  IAPWS-Viscosity-08.h  IAPWS-Viscosity-85.c  IAPWS-Viscosity-85.h
src/lib/geofluidprop/src/model/klyukinetal17/: KlyukinEtAl2017.c  KlyukinEtAl2017.h
src/lib/geofluidprop/src/sbtl/: CMakeLists.txt  sbtl_utility.c  sbtl_utility.h
src/lib/geofluidprop/src/sbtl/iapws_sbtl_ph/: CMakeLists.txt  IAPWS95_SBTL_ph.c  IAPWS95_SBTL_ph.h
src/lib/geofluidprop/src/spline/: CMakeLists.txt  spl_grid.c  spl_grid.h  spl_spline1d.c  spl_spline1d.h  spl_splinek1d.c  spl_splinek1d.h  spl_splinek2d.c  spl_splinek2d.h  spl_splinek3d.c  spl_splinek3d.h
src/lib/geofluidprop/src/spline/math/: spl_darray.c  spl_darray.h  spl_lsolver.c  spl_lsolver.h  spl_math.h  spl_spmat.c  spl_spmat.h  spl_vec.c  spl_vec.h
src/lib/geofluidprop/src/util/: CMakeLists.txt  gauss3-template.h  gauss3.c  gauss3.h  utility.c  utility.h
src/lib/geofluidprop/test/: CMakeLists.txt  test_main.c
src/lib/geofluidprop/test/interface/: CMakeLists.txt  test-eos.c  time_rho_ph.c
src/lib/geofluidprop/test/model/: CMakeLists.txt  test-driesner07-prost.c  test-driesner07.c  test-iaps84.c  test-klyukinetal17.c  test-prost.c  test_iapws.c  test_if97.c
src/lib/geofluidprop/test/util/: CMakeLists.txt  test_util.c
src/lib/geofluidprop/wrapper/: CMakeLists.txt
src/lib/geofluidprop/wrapper/Python/: README.md
src/lib/geofluidprop/wrapper/R/: .gitignore  H2ONaCl_electrical_conductivity.R  README.md  geofluidprop_init.R
src/lib/geofluidprop/wrapper/VBA/: geofluidprop.bas
src/lib/geofluidprop/wrapper/swig/: geofluidprop.i
tests/: testthat.R
tests/testthat/: test-Driesner07.R  test-IAPWS95.R
vignettes/: geofluidprop.Rmd
