
add_subdirectory( iapws_sbtl_ph )

file(GLOB FILES_HEADER RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB FILES_SOURCE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
set(TMP_SOURCES ${FILES_HEADER} ${FILES_SOURCE})
list(TRANSFORM TMP_SOURCES PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
set(SOURCES ${SOURCES} ${TMP_SOURCES} PARENT_SCOPE)

